@@ -9,5 +9,19 @@
         "logstash.log.module": "logstash.modules.scaffold", 
         "offset": 0, 
         "prospector.type": "log"
+    }, 
+    {
+        "@timestamp": "2017-11-20T03:55:00,318", 
+        "fileset.module": "logstash", 
+        "fileset.name": "log", 
+        "input.type": "log", 
+        "log.flags": [
+            "multiline"
+        ], 
+        "logstash.log.level": "INFO", 
+        "logstash.log.message": "(0.058950s) Select Name as [person.name]\n, Address as [person.address]\nfrom people\n", 
+        "logstash.log.module": "logstash.inputs.jdbc     ", 
+        "offset": 175, 
+        "prospector.type": "log"
     }
 ]
